--- a/textAdEngineDemo_server/textAdEngineDemo_server.csproj
+++ b/textAdEngineDemo_server/textAdEngineDemo_server.csproj
@@ -48,6 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="client.cs" />
     <Compile Include="main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
